full-moon/tests/roblox_cases/pass/generic_functions/source.lua
function foo<x, y>()
end

local function bar<x>()
end