full-moon/tests/roblox_cases/fail/parser/function_return_type_thin_arrow/source.lua
function foo() -> string
	return ""
end